[project]

version = '0.0.13'
name="pyairbnb-os"
description = 'PyAirbnb on steroids!'
authors = [
  { name="Adalberto (original author: John Balvin)", email="heyadalberto@gmail.com" },
]
readme= "README.md"
keywords=['airbnb', 'scraper', 'crawler','bot','reviews']
dependencies=['curl_cffi','bs4','requests']


[project.urls]
Homepage='https://github.com/adalberto/pyairbnb-os'
Original='https://github.com/johnbalvin/pyairbnb'